feat: enhance attempt functionality with difficulty-based question selection and validation